in this commit I added some styling to my .tutle class which I am using on the titles for each section I made the poition relative to ensure that it maintes its space on the background image i want it to be with. I have also added in background images to each of the sections to better define them, and now when you click on the nav links in the head the shift to the differnt parts of the page is noticable.

--- a/style.css
+++ b/style.css
@@ -28,6 +28,41 @@ main {
   background-position: center;
 }
 
+.title {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  color: rgb(0, 0, 0);
+  background-color: rgb(250, 249, 249);
+  border: 5px solid rgb(255, 255, 255);
+  max-width: 100%;
+}
+.img-builds {
+  background-image: url(the-tarnished.jpg);
+  display: flex;
+  margin-bottom: 0px;
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  padding-top: 10px;
+}
+.img-maps {
+  background-image: url(hero_shot.jpg);
+  display: flex;
+  align-items: flex-start;
+  height: 500px;
+  max-width: 100%;
+  margin-top: 5%;
+  background-size: cover;
+  padding-top: 10px;
+}
+.img-patches {
+  background-image: url(hero_shot_02.jpg);
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  padding-top: 10px;
+}
 footer {
   background: grey;
   text-align: center;
